--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "primeicons": "^7.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
